# trabalho-angelis

./: CMakeCache.txt  CMakeLists.txt  FT_Bakery.cbp  FT_bakery.cpp  FT_bakery.hpp  Makefile  a02ex03.sh  cmake_install.cmake
Itens/Bread/: Bread.cpp  Bread.hpp
Itens/Cheese/: Cheese.cpp  Cheese.hpp
Itens/CottageCheese/: CottageCheese.cpp  CottageCheese.hpp
Itens/Cracker/: Cracker.cpp  Cracker.hpp
Itens/FilledWafer/: FilledWafer.cpp  FilledWafer.hpp
Itens/Food/: Food.cpp
Itens/Ham/: Ham.cpp  Ham.hpp
Itens/Mortadella/: Mortadella.cpp  Mortadella.hpp
Process/Information/: Information.cpp
Process/Menu/: Menu.cpp
Process/MyProgram/: MyProgram.cpp  MyProgram.hpp
